# your-performance-tracker-near-dapp

./: .gitignore  package-lock.json  package.json
contract/: Cargo.toml  README.md  deploy.sh  init.sh
contract/src/: app_challenge.rs  app_user.rs  lib.rs  tests.rs  utils.rs
frontend/: App.js  index.html  index.js  near-interface.ts  package-lock.json  package.json
frontend/assets/: global.css
frontend/src/: App.tsx
frontend/src/api/: ipfs.ts
frontend/src/near/: contract.ts  wallet.ts
frontend/src/store/: store.ts
frontend/src/types/: contract-entities.ts  frontend-types.ts
frontend/src/ui/atoms/: AccountMenu.tsx  ActionButton.tsx  BalanceCard.tsx  DisplayText.tsx  LocChip.tsx  Logo.tsx  MenuItem.tsx  ProofPicture.tsx
frontend/src/ui/components/: ActionSteps.tsx  AppAlert.tsx  AppLoader.tsx  AppModal.tsx  BalanceInputChipsHelper.tsx  ChallengeItem.tsx  Header.tsx  SideMenu.tsx
frontend/src/ui/components/FileInput/: FileInput.tsx  file-input.css
frontend/src/ui/components/Modal/: AddProofModal.tsx  AppModal.tsx  ShowProofModal.tsx
frontend/src/ui/pages/: SignedInStack.tsx  UnsignedInStack.tsx
frontend/src/ui/theme/: theme.ts
frontend/src/ui/views/: AddNewChallenge.tsx  AlertContainer.tsx  AlertProvider.tsx  Challenges.tsx  Deposit.tsx  NotFoundPage.tsx  Withdraw.tsx  navigation.ts
frontend/src/utils/: helpers.ts
