[package]
name = "your_performance_tracker"
version = "1.0.0"
authors = ["Timur Ruziev <ruziev.dev@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }

chrono = "0.4.22"
serde_json = "1.0.86"
strum = "0.24.1"
strum_macros = "0.24.3"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
